src/objects/P7S1_PortalLoginEvent__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_EventMessage__c</fullName>
        <label>P7S1_EventMessage</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_EventTimestamp__c</fullName>
        <label>P7S1_EventTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_EventType__c</fullName>
        <label>P7S1_EventType</label>
        <picklist>
            <picklistValues>
                <fullName>created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>activated-salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email-send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>activated-liferay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_PortalLogin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Login</label>
        <referenceTo>P7S1_PortalLogin__c</referenceTo>
        <relationshipLabel>Portal Login Events</relationshipLabel>
        <relationshipName>Portal_Login_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P7S1_Successful</label>
        <type>Checkbox</type>
    </fields>
    <label>Portal Login Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>P7S1_EventMessage__c</columns>
        <columns>P7S1_EventType__c</columns>
        <columns>P7S1_Successful__c</columns>
        <columns>P7S1_PortalLogin__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>evt-log-{0}</displayFormat>
        <label>P7S1_ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Login Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>